objects/Case_Impacted_Areas__mdt.object
<CustomObject>
    <description>Contains the case impacted ares.</description>
    <fields>
        <fullName>Case_Module__c</fullName>
        <label>Case Module</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Reason__c</fullName>
        <label>Case Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Keyword__c</fullName>
        <label>Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <label>Module</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordTypeName__c</fullName>
        <description>Contains the record type name corresponding to the impacted area.</description>
        <label>RecordTypeName</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Academy</fullName>
                </value>
                <value>
                    <fullName>Playground</fullName>
                </value>
                <value>
                    <fullName>Support_Case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Module__c</fullName>
        <label>Sub Module</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Case Impacted Area</label>
    <listViews>
        <fullName>All_Custom</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>Case_Reason__c</columns>
        <columns>Case_Module__c</columns>
        <columns>RecordTypeName__c</columns>
        <columns>Keyword__c</columns>
        <columns>IsProtected</columns>
        <filterScope>Everything</filterScope>
        <label>All (Custom)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_with_Fields</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Keyword__c</columns>
        <columns>Case_Reason__c</columns>
        <columns>Module__c</columns>
        <columns>Sub_Module__c</columns>
        <columns>RecordTypeName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All with Fields</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Case Impacted Areas</pluralLabel>
</CustomObject>